# m3serve

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/m3serve/: __init__.py  batcher.py  model.py  queue.py  types.py
tests/: test_batcher.py  test_model.py  test_queue.py
