[project]
name = "m3serve"
version = "0.1.4"
description = "High-throughput BGE-M3 inference engine with dense + sparse embeddings"
readme = "README.md"
authors = [
    { name = "MauroCE", email = "maurocamaraescudero@gmail.com" }
]
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "huggingface-hub>=0.19",
    "pydantic>=2.13.3",
    "torch>=2.1",
    "transformers>=4.44,<5",
]

[project.urls]
Homepage = "https://github.com/MauroCE/m3serve"
Repository = "https://github.com/MauroCE/m3serve"
Issues = "https://github.com/MauroCE/m3serve/issues"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pre-commit>=4.6.0",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]  # pycodestyle, pyflakes, isort, pyupgrade

[tool.mypy]
strict = true
python_version = "3.11"

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["untyped-decorator"]

[[tool.mypy.overrides]]
module = "m3serve.model"
disable_error_code = ["no-untyped-call"]

